--- a/package.json
+++ b/package.json
@@ -1,53 +1,54 @@
 {
-	"name": "znote",
-	"version": "1.1.0",
-	"description": "VuePress 静态布局 Blog，清新+ 简洁+。",
-	"homepage": "https://north-glory.github.io",
-	"license": "MIT",
-	"keywords": [
-		"vuepress",
-		"vue",
-		"blog",
-		"znote",
-		"theme"
-	],
-	"author": {
-		"name": "zpj80231"
-	},
-	"bugs": {
-		"url": "https://github.com/zpj80231/issues"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/zpj80231.git"
-	},
-	"scripts": {
-		"dev": "vuepress dev docs",
-		"build": "vuepress build docs",
-		"dev:node:options": "set NODE_OPTIONS=--openssl-legacy-provider && vuepress dev docs",
-		"dev:node:options:mac": "export NODE_OPTIONS=--openssl-legacy-provider && vuepress dev docs",
-		"build:node:options:mac": "export NODE_OPTIONS=--openssl-legacy-provider && vuepress build docs",
-		"deploy": "bash ./utils/deploy.sh"
-	},
-	"dependencies": {
-		"@vuepress/plugin-google-analytics": "1.9.10",
-		"@vuepress/plugin-medium-zoom": "^1.9.8",
-		"@vuepress/plugin-pwa": "^1.9.8",
-		"@vuepress/plugin-register-components": "1.9.10",
-		"vuepress-plugin-boxx": "^1.0.0",
-		"vuepress-plugin-code-copy": "^1.0.6",
-		"vuepress-plugin-container": "^2.1.5",
-		"vuepress-plugin-copyright": "^1.0.2",
-		"vuepress-plugin-fulltext-search": "^2.2.1",
-		"vuepress-plugin-sitemap": "2.3.1",
-		"vuepress-plugin-smooth-scroll": "^0.0.10",
-		"vuepress-theme-reco": "1.6.17",
-		"vuepress": "^1.9.10",
-		"js-yaml": "^4.1.0",
-		"axios": "^0.26.1",
-		"markdown-it-disable-url-encode": "^1.0.1",
-		"jquery": "^3.7.1",
-		"moment": "^2.30.1",
-		"whatwg-fetch": "3.6.20"
-	}
+  "name": "znote",
+  "version": "1.1.0",
+  "description": "VuePress 静态布局 Blog，清新+ 简洁+。",
+  "homepage": "https://north-glory.github.io",
+  "license": "MIT",
+  "keywords": [
+    "vuepress",
+    "vue",
+    "blog",
+    "znote",
+    "theme"
+  ],
+  "author": {
+    "name": "zpj80231"
+  },
+  "bugs": {
+    "url": "https://github.com/zpj80231/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zpj80231.git"
+  },
+  "scripts": {
+    "dev": "vuepress dev docs",
+    "build": "vuepress build docs",
+    "dev:node:options": "set NODE_OPTIONS=--openssl-legacy-provider && vuepress dev docs",
+    "dev:node:options:mac": "export NODE_OPTIONS=--openssl-legacy-provider && vuepress dev docs",
+    "build:node:options:mac": "export NODE_OPTIONS=--openssl-legacy-provider && vuepress build docs",
+    "deploy": "bash ./utils/deploy.sh"
+  },
+  "dependencies": {
+    "@vuepress/plugin-google-analytics": "1.9.10",
+    "@vuepress/plugin-medium-zoom": "^1.9.8",
+    "@vuepress/plugin-pwa": "^1.9.8",
+    "@vuepress/plugin-register-components": "1.9.10",
+    "axios": "^0.26.1",
+    "jquery": "^3.7.1",
+    "js-yaml": "^4.1.0",
+    "markdown-it-disable-url-encode": "^1.0.1",
+    "moment": "^2.30.1",
+    "npm": "^6.14.18",
+    "vuepress": "^1.9.10",
+    "vuepress-plugin-boxx": "^1.0.0",
+    "vuepress-plugin-code-copy": "^1.0.6",
+    "vuepress-plugin-container": "^2.1.5",
+    "vuepress-plugin-copyright": "^1.0.2",
+    "vuepress-plugin-fulltext-search": "^2.2.1",
+    "vuepress-plugin-sitemap": "2.3.1",
+    "vuepress-plugin-smooth-scroll": "^0.0.10",
+    "vuepress-theme-reco": "1.6.17",
+    "whatwg-fetch": "3.6.20"
+  }
 }
